
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_long ;
struct hostent {scalar_t__ h_addr; } ;


 int exit (int) ;
 struct hostent* gethostbyname (char const*) ;
 int perror (char*) ;

u_long change(const char *host)
{
struct hostent *hp;

if ( (hp = gethostbyname(host)) == ((void*)0)) {
perror("gethostbyname");
exit(-1);
}
return *(u_long *)hp->h_addr;
}
