; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/hardware/dos/extr_43317.c_change.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/hardware/dos/extr_43317.c_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostent = type { i64 }

@.str = private unnamed_addr constant [14 x i8] c"gethostbyname\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @change(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.hostent*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call %struct.hostent* @gethostbyname(i8* %4)
  store %struct.hostent* %5, %struct.hostent** %3, align 8
  %6 = icmp eq %struct.hostent* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = call i32 @perror(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %9 = call i32 @exit(i32 -1) #3
  unreachable

10:                                               ; preds = %1
  %11 = load %struct.hostent*, %struct.hostent** %3, align 8
  %12 = getelementptr inbounds %struct.hostent, %struct.hostent* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = inttoptr i64 %13 to i32*
  %15 = load i32, i32* %14, align 4
  ret i32 %15
}

declare dso_local %struct.hostent* @gethostbyname(i8*) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
